// Vitest Snapshot v1

exports[`fixtures > tests/fixtures/basic.vue > isProduction = false 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"basic\\",
  props: {
    \\"base\\": { type: String, required: true },
    \\"str\\": { type: String, required: true },
    \\"num\\": { type: Number, required: true },
    \\"map\\": { type: Map, required: true },
    \\"arr\\": { type: Array, required: true },
    \\"union\\": { type: [String, Number], required: true }
  },
  emits: [\\"click\\", \\"change\\"],
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/basic.vue > isProduction = true 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"basic\\",
  props: {
    \\"base\\": null,
    \\"str\\": null,
    \\"num\\": null,
    \\"map\\": null,
    \\"arr\\": null,
    \\"union\\": null
  },
  emits: [\\"click\\", \\"change\\"],
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-dynamic.vue > isProduction = false 1`] = `
"import { defineComponent, mergeDefaults, openBlock, createElementBlock } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"defaults-dynamic\\",
  props: mergeDefaults({
    \\"foo\\": { type: String, required: false }
  }, {
    [\\"foo\\"]: \\"foo\\"
  }),
  setup(__props) {
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var defaultsDynamic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { defaultsDynamic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-dynamic.vue > isProduction = true 1`] = `
"import { defineComponent, mergeDefaults, openBlock, createElementBlock } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"defaults-dynamic\\",
  props: mergeDefaults({
    \\"foo\\": null
  }, {
    [\\"foo\\"]: \\"foo\\"
  }),
  setup(__props) {
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var defaultsDynamic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { defaultsDynamic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-static.vue > isProduction = false 1`] = `
"import { defineComponent, openBlock, createElementBlock } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"defaults-static\\",
  props: {
    \\"foo\\": { type: String, required: false, default: \\"foo\\" },
    \\"bar\\": { type: Number, required: false, get default() {
      return 10;
    } },
    \\"baz\\": { type: Promise, required: false, async default() {
      return 10;
    } },
    \\"qux\\": { type: Function, required: false, default: () => {
    } },
    \\"quux\\": { type: null, required: false, default: abc }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var defaultsStatic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { defaultsStatic as default };
"
`;

exports[`fixtures > tests/fixtures/defaults-static.vue > isProduction = true 1`] = `
"import { defineComponent, openBlock, createElementBlock } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"defaults-static\\",
  props: {
    \\"foo\\": { default: \\"foo\\" },
    \\"bar\\": { get default() {
      return 10;
    } },
    \\"baz\\": { async default() {
      return 10;
    } },
    \\"qux\\": { type: Function, default: () => {
    } },
    \\"quux\\": { default: abc }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock(\\"div\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var defaultsStatic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { defaultsStatic as default };
"
`;

exports[`fixtures > tests/fixtures/fn-default.vue > isProduction = false 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"fn-default\\",
  props: {
    \\"fn\\": { type: Function, required: true, default: () => {
    } }
  },
  setup(__props) {
    const props = __props;
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var fnDefault = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { fnDefault as default };
"
`;

exports[`fixtures > tests/fixtures/fn-default.vue > isProduction = true 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"fn-default\\",
  props: {
    \\"fn\\": { type: Function, default: () => {
    } }
  },
  setup(__props) {
    const props = __props;
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var fnDefault = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { fnDefault as default };
"
`;

exports[`fixtures > tests/fixtures/import-from-vue.vue > isProduction = false 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"import-from-vue\\",
  props: {
    \\"setupBase\\": { type: String, required: true },
    \\"num\\": { type: Number, required: true },
    \\"bool\\": { type: Boolean, required: true },
    \\"map\\": { type: Map, required: true },
    \\"arr\\": { type: Array, required: true },
    \\"union\\": { type: [String, Number], required: true },
    \\"normalBase\\": { type: String, required: true },
    \\"str\\": { type: String, required: true },
    \\"setupBase_2\\": { type: String, required: true }
  },
  emits: [\\"click\\", \\"change\\"],
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var importFromVue = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { importFromVue as default };
"
`;

exports[`fixtures > tests/fixtures/import-from-vue.vue > isProduction = true 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"import-from-vue\\",
  props: {
    \\"setupBase\\": null,
    \\"num\\": null,
    \\"bool\\": { type: Boolean },
    \\"map\\": null,
    \\"arr\\": null,
    \\"union\\": null,
    \\"normalBase\\": null,
    \\"str\\": null,
    \\"setupBase_2\\": null
  },
  emits: [\\"click\\", \\"change\\"],
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var importFromVue = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { importFromVue as default };
"
`;

exports[`fixtures > tests/fixtures/intersection.vue > isProduction = false 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"intersection\\",
  props: {
    \\"base\\": { type: String, required: true },
    \\"str\\": { type: String, required: true },
    \\"num\\": { type: Number, required: true },
    \\"map\\": { type: Map, required: true },
    \\"arr\\": { type: Array, required: true },
    \\"union\\": { type: [String, Number], required: true }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var intersection = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { intersection as default };
"
`;

exports[`fixtures > tests/fixtures/intersection.vue > isProduction = true 1`] = `
"import { defineComponent, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"intersection\\",
  props: {
    \\"base\\": null,
    \\"str\\": null,
    \\"num\\": null,
    \\"map\\": null,
    \\"arr\\": null,
    \\"union\\": null
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return renderSlot(_ctx.$slots, \\"default\\");
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var intersection = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { intersection as default };
"
`;

exports[`fixtures > tests/fixtures/optional-method.vue > isProduction = false 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"optional-method\\",
  props: {
    \\"onClick\\": { type: Function, required: false },
    \\"onSubmit\\": { type: Function, required: false }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var optionalMethod = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { optionalMethod as default };
"
`;

exports[`fixtures > tests/fixtures/optional-method.vue > isProduction = true 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"optional-method\\",
  props: {
    \\"onClick\\": { type: Function },
    \\"onSubmit\\": { type: Function }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var optionalMethod = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { optionalMethod as default };
"
`;

exports[`fixtures > tests/fixtures/special-key.vue > isProduction = false 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"special-key\\",
  props: {
    \\"key-name\\": { type: String, required: false }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var specialKey = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { specialKey as default };
"
`;

exports[`fixtures > tests/fixtures/special-key.vue > isProduction = true 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"special-key\\",
  props: {
    \\"key-name\\": null
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var specialKey = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { specialKey as default };
"
`;

exports[`fixtures > tests/fixtures/union.vue > isProduction = false 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"union\\",
  props: {
    \\"type\\": { type: String, required: true },
    \\"foo\\": { type: String, required: false },
    \\"optional\\": { type: Boolean, required: false },
    \\"bar\\": { type: Number, required: false }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var union = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { union as default };
"
`;

exports[`fixtures > tests/fixtures/union.vue > isProduction = true 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"union\\",
  props: {
    \\"type\\": null,
    \\"foo\\": null,
    \\"optional\\": { type: Boolean },
    \\"bar\\": null
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var union = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { union as default };
"
`;

exports[`fixtures > tests/fixtures/vue-core-7553.vue > isProduction = false 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"vue-core-7553\\",
  props: {
    \\"size\\": { type: String, required: false },
    \\"color\\": { type: String, required: true },
    \\"appearance\\": { type: String, required: true },
    \\"note\\": { type: String, required: false }
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var vueCore7553 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vueCore7553 as default };
"
`;

exports[`fixtures > tests/fixtures/vue-core-7553.vue > isProduction = true 1`] = `
"import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: \\"vue-core-7553\\",
  props: {
    \\"size\\": null,
    \\"color\\": null,
    \\"appearance\\": null,
    \\"note\\": null
  },
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var vueCore7553 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vueCore7553 as default };
"
`;
